--- a/src/Routing/app.yaml
+++ b/src/Routing/app.yaml
@@ -1,3 +1,39 @@
+app_login:
+  path: /
+  defaults: {_controller: App\Controller\LoginController::index}
+
+app_register:
+  path: /register
+  defaults: {_controller: App\Controller\RegistrationController::register}
+
+app_logout:
+  path: /logout
+  defaults: {_controller: App\Controller\LogoutController::index}
+
 app_inicio:
-  path: /inicio
-  defaults: {_controller: App\Controller\InicioController::index}
+  path: /inicio/{pantalla}
+  defaults: {_controller: App\Controller\InicioController::index, pantalla: '0'}
+
+app_pisos:
+  path: /locacion/pisos
+  defaults: {_controller: App\Controller\LocacionController::pisos}
+
+app_nuevoPiso:
+  path: /locacion/nuevoPiso
+  defaults: {_controller: App\Controller\LocacionController::nuevoPiso}
+
+app_eliminarPiso:
+  path: /locacion/eliminarPiso/{id}
+  defaults: {_controller: App\Controller\LocacionController::eliminarPiso}
+
+app_habitaciones:
+  path: /locacion/habitaciones
+  defaults: {_controller: App\Controller\LocacionController::habitaciones}
+
+app_nuevaHabitacion:
+  path: /locacion/nuevaHabitacion
+  defaults: {_controller: App\Controller\LocacionController::nuevaHabitacion}
+
+app_eliminarHabitacion:
+  path: /locacion/eliminarHabitacion/{id}
+  defaults: {_controller: App\Controller\LocacionController::eliminarHabitacion}
