--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=produccion
 APP_SECRET=b6006dff55df9407acab8d7772be795c
 ###< symfony/framework-bundle ###
 
@@ -25,7 +25,7 @@ APP_SECRET=b6006dff55df9407acab8d7772be795c
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://postgres:123456@127.0.0.1:5432/bdhotelcrn?serverVersion=17&charset=utf8"
+DATABASE_URL="postgresql://postgres:123@127.0.0.1:5433/bdhotelcrn?serverVersion=17&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
