--- a/src/Routing/app.yaml
+++ b/src/Routing/app.yaml
@@ -37,3 +37,41 @@ app_nuevaHabitacion:
 app_eliminarHabitacion:
   path: /locacion/eliminarHabitacion/{id}
   defaults: {_controller: App\Controller\LocacionController::eliminarHabitacion}
+
+app_tipodoc:
+  path: /configuracion/tipodoc
+  defaults: {_controller: App\Controller\ConfiguracionController::tipoDoc}
+
+app_guardarTipodoc:
+  path: /configuracion/guardarTipodoc
+  defaults: {_controller: App\Controller\ConfiguracionController::guardarTipodoc}
+
+app_eliminarTipodoc:
+  path: /configuracion/eliminarTipodoc/{id}
+  defaults: {_controller: App\Controller\ConfiguracionController::eliminarTipodoc}
+
+app_companias:
+  path: /configuracion/companias
+  defaults: {_controller: App\Controller\ConfiguracionController::companias}
+
+app_nuevaCompania:
+  path: /configuracion/nuevaCompania
+  defaults: {_controller: App\Controller\ConfiguracionController::nuevaCompania}
+
+app_eliminarCompania:
+  path: /configuracion/eliminarCompania/{id}
+  defaults: {_controller: App\Controller\ConfiguracionController::eliminarCompania}
+
+app_clientes:
+  path: /clientes
+  defaults: {_controller: App\Controller\ClientesController::lista}
+
+app_guardarClientes:
+  path: /clientes/guardarClientes
+  defaults: {_controller: App\Controller\ClientesController::guardarClientes}
+
+app_eliminarClientes:
+  path: /clientes/eliminarClientes/{id}
+  defaults: {_controller: App\Controller\ClientesController::eliminarClientes}
+
+
