--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=produccion
+APP_ENV=dev
 APP_SECRET=b6006dff55df9407acab8d7772be795c
 ###< symfony/framework-bundle ###
 
