--- a/src/Routing/app.yaml
+++ b/src/Routing/app.yaml
@@ -14,6 +14,10 @@ app_inicio:
   path: /inicio/{pantalla}
   defaults: {_controller: App\Controller\InicioController::index, pantalla: '0'}
 
+app_dashboard:
+  path: /dashboard
+  defaults: {_controller: App\Controller\InicioController::dashboard}
+
 app_pisos:
   path: /locacion/pisos
   defaults: {_controller: App\Controller\LocacionController::pisos}
@@ -73,5 +77,25 @@ app_guardarClientes:
 app_eliminarClientes:
   path: /clientes/eliminarClientes/{id}
   defaults: {_controller: App\Controller\ClientesController::eliminarClientes}
+
+app_reservas:
+  path: /reservas
+  defaults: {_controller: App\Controller\ReservasController::lista}
+
+app_nuevaReserva:
+  path: /nuevaReserva
+  defaults: {_controller: App\Controller\ReservasController::nuevaReserva}
+
+app_guardarReserva:
+  path: /guardarReserva
+  defaults: {_controller: App\Controller\ReservasController::guardarReserva}
+
+app_obtenerDatosClienteReserva:
+  path: /obtenerDatosClienteReserva/{id}
+  defaults: {_controller: App\Controller\ReservasController::obtenerDatosClienteReserva}
+
+app_abrirTurno:
+  path: /abrirTurno
+  defaults: {_controller: App\Controller\TurnosController::abrirTurno}
 
 
