--- a/src/Routing/app.yaml
+++ b/src/Routing/app.yaml
@@ -134,5 +134,32 @@ app_eliminarServicio:
   path: /eliminarServicio/{id}
   defaults: {_controller: App\Controller\ConfiguracionController::eliminarServicio}
 
+app_obtenerServicio:
+  path: /obtenerServicio/{id}
+  defaults: {_controller: App\Controller\ConfiguracionController::obtenerServicio}
+
+app_stock:
+  path: /stock
+  defaults: {_controller: App\Controller\StockController::listas}
+
+app_productos:
+  path: /productos
+  defaults: {_controller: App\Controller\StockController::productos}
+
+app_guardarProducto:
+  path: /guardarProducto
+  defaults: {_controller: App\Controller\StockController::guardarProducto}
+
+app_inventario:
+  path: /inventario
+  defaults: {_controller: App\Controller\StockController::inventario}
+
+app_entradas:
+  path: /entradas
+  defaults: {_controller: App\Controller\StockController::entradas}
+
+
+
+
 
 
