Creacion de productos y entradas

--- a/src/Routing/app.yaml
+++ b/src/Routing/app.yaml
@@ -158,6 +158,10 @@ app_entradas:
   path: /entradas
   defaults: {_controller: App\Controller\StockController::entradas}
 
+app_guardarEntrada:
+  path: /guardarEntrada
+  defaults: {_controller: App\Controller\StockController::guardarEntrada}
+
 
 
 
