--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^2.20",
         "phpdocumentor/reflection-docblock": "^5.6",
+        "phpoffice/phpspreadsheet": "1.23",
         "phpstan/phpdoc-parser": "^2.1",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
