--- a/src/Routing/app.yaml
+++ b/src/Routing/app.yaml
@@ -110,6 +110,10 @@ app_abrirTurno:
   path: /abrirTurno
   defaults: {_controller: App\Controller\TurnosController::abrirTurno}
 
+app_cerrarTurno:
+  path: /cerrarTurno
+  defaults: {_controller: App\Controller\TurnosController::cerrarTurno}
+
 app_servicios:
   path: /servicios
   defaults: {_controller: App\Controller\ConfiguracionController::servicios}
@@ -181,6 +185,23 @@ app_obtenerProducto:
 app_updateCantProducto:
   path: /updateCantProducto/{id},{accion},{cantidad}
   defaults: {_controller: App\Controller\StockController::updateCantProducto}
+
+app_checkin:
+  path: /checkin
+  defaults: {_controller: App\Controller\ReservasController::checkin}
+
+app_obtenerCheckin:
+  path: /checkin/obtenerCheckin/{id}
+  defaults: {_controller: App\Controller\ReservasController::obtenerCheckin}
+
+
+app_registrarVenta:
+  path: /registrarVenta/{detalle},{producto},{cantidad},{valor}
+  defaults: {_controller: App\Controller\ContabilidadController::registrarVenta}
+
+app_turnos:
+  path: /listaTurnos
+  defaults: {_controller: App\Controller\TurnosController::listaTurnos}
 
 
 
