--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,7 +22,9 @@ security:
                 login_path: app_login
                 check_path: app_login
                 default_target_path: '/inicio'               # <- aquí
-                always_use_default_target_path: false    
+                always_use_default_target_path: false
+                # custom success handler to enforce password change
+                success_handler: App\Security\LoginSuccessHandler
 
             logout:
                 path: app_logout
